# Better-Check-That

./: Cargo.toml  Config.toml  README.md  config.toml
src/: main.rs  notification.rs  utils.rs  virustotal.rs
