[package]
name = "better_check_that"
version = "0.1.0"
edition = "2021"
description = "BCT: Better Check That, a tool for scanning USB devices on the fly."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "dbt", "winnt", "libloaderapi", "windef", "wingdi"] }
chrono = { version = "0.4.38"}
serde_json = "1.0.117"
csv = "1.3.0"
reqwest = "0.12.4"
rodio = "0.18.0"
toml = "0.8.13"
hashlib = "0.1.0"
walkdir = "2.5.0"
md5 = "0.6.1"
async-std = "1.12.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }